# insomniac

./: .clang-format  .gitignore  CMakeIncludes.txt  CMakeLists.txt  CMakeTestIncludes.txt  README  base-lib-proc-list.txt  count.sh  docker-compose.yml  format.sh  insomniac_as  profile-show.sh  profile.sh  run-asm.sh  run.sh  setup.sh
asm/: asm-writer.asm  byte-vector.asm  call_test.asm  car_cdr.asm  closure.asm  echo.asm  environment.asm  fib.asm  func.asm  import-binding.asm  import.asm  leak_hunt.asm  proc_leak_hunt.asm  rot.asm  simple.asm  stack_dump.asm  stack_dumper.asm  tail_call.asm  test_types.asm  utf8.asm
core/: CMakeLists.txt  insomniac-core.scm
core/lexer/: core.scm
docker/: Dockerfile
lib/: baselib.scm  boolean.scm  byte-vectors.scm  call-cc.scm  dynamic.scm  error.scm  lists.scm  loop.scm  math.scm  parameter.scm  ports.scm  postamble.asm  preamble.asm  predicates.scm  records.scm  stdlib.asm  strings.scm  vectors.scm
lib/old/: stdlib.asm
lib/ports/: binary.scm  core.scm  memory.scm  textual.scm
lib/vectors/: byte-vectors.scm  core.scm  vectors.scm
repl/: CMakeLists.txt  insomniac-repl.scm
scm/: big_dot.scm  dot.scm  dot2.scm  if_opt.scm  let.scm  run-bare.sh  run.sh  test_asm.scm  test_byte_vector.scm  test_cons.scm  test_define.scm  test_define2.scm  test_display.scm  test_env.scm  test_false.scm  test_import.scm  test_include.scm  test_lambda.scm  test_leak.scm  test_lists.scm  test_looping.scm  test_math.scm  test_quote.scm  test_set.scm  test_tail.scm
src/: CMakeLists.txt  compiler.c  main.c
src/core/: CMakeLists.txt  asm-core.scm  insomniac-core.scm
src/core/asm/: lexer.scm
src/core/lexer/: core.scm  lexer.scm  matchers.scm  stream.scm  token.scm
src/core/scheme/: lexer.scm
src/include/: asm.h  ast.h  bootstrap.h  buffer.h  cell.h  emit.h  gc.h  hash.h  insomniac.h  object.h  ops.h  parser.h  types.h  utf8.h  util.h  vm.h
src/lib/: boolean.scm  call-cc.scm  error.scm  lists.scm  loop.scm  records.scm  strings.scm
src/lib/ports/: binary.scm  core.scm  memory.scm  textual.scm
src/lib/test/: expect.scm
src/lib/vectors/: vectors.scm
src/libinsomniac_asm/: CMakeLists.txt  asm_core.c  asm_internal.h  asm_types.c  lexer.l
src/libinsomniac_bootstrap/: CMakeLists.txt  bootstrap_core.c  bootstrap_emit.c  bootstrap_emit_formatting.c  bootstrap_internal.h  bootstrap_preamble.c  bootstrap_states.c  bootstrap_stream.c  bootstrap_stream_nodes.c  lexer.l  scheme.y
src/libinsomniac_buffer/: CMakeLists.txt  buffer_core.c  buffer_internal.h  buffer_load.c  buffer_open.c
src/libinsomniac_gc/: CMakeLists.txt  gc_core.c  gc_internal.h  gc_internals.c  gc_offset.c  gc_sweep.c  gc_types.c  gc_util.c  internals.c  offset.c  special_alloc.c  sweep.c  types.c
src/libinsomniac_hash/: CMakeLists.txt  hash_core.c  hash_internal.h  hash_pointer_functions.c  hash_string_functions.c  hash_types.c
src/libinsomniac_io/: CMakeLists.txt  io_core.c  io_internal.h
src/libinsomniac_lexer/: CMakeLists.txt  lexer.l
src/libinsomniac_parser/: CMakeLists.txt  alloc.c  builder.c  output.c  parser_core.c  parser_internal.h  scheme.y  symbol_table.c
src/libinsomniac_runtime/: CMakeLists.txt  runtime_core.c  runtime_internal.h
src/libinsomniac_vm/: CMakeLists.txt  vm_alloc.c  vm_core.c  vm_env.c  vm_eval.c  vm_exception.c  vm_internal.h  vm_ops.c  vm_output.c  vm_string.c  vm_types.c  vm_utf8.c  vm_util.c
src/libinsomniac_vm/libinsomniac_vm_instructions/: CMakeLists.txt  vm_char.c  vm_instructions_internal.h  vm_internals.c  vm_io.c  vm_jump.c  vm_library.c  vm_list.c  vm_literals.c  vm_locations.c  vm_logic.c  vm_math.h  vm_ops.c  vm_stack.c  vm_types.h  vm_vector.c
test/: CMakeLists.txt  expect.scm  test_apply.scm  test_bools.scm  test_byte_vector.scm  test_call_cc.scm  test_core_lexer.scm  test_core_matchers.scm  test_core_stream.scm  test_core_token.scm  test_define_record_type.scm  test_eq.scm  test_equal.scm  test_hash.c  test_let.scm  test_lists.scm  test_pair.scm  test_paramter.scm  test_ports.scm  test_strings.scm  test_vectors.scm
test/include/: test.h
test/libtester/: CMakeLists.txt  tester_main.c
